<resources>
    <string name="app_name">StarsMaps</string>
    <string name="pencarian_rute_toko">Pencarian Rute Toko</string>
    <string name="list_data_toko">List Data Toko</string>
    <string name="keluar_aplikasi">Keluar Aplikasi</string>
    <string name="no">No</string>
    <string name="str_id">Str ID</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="provinsi">Provinsi</string>
    <string name="sms">SMS</string>
    <string name="cari_data_toko">Cari Data Toko</string>
    <string name="title_activity_maps">Map</string>
    <string name="asal">Asal</string>
    <string name="tujuan">Tujuan</string>
    <string name="node">Node</string>
    <string name="jarak">Jarak</string>
    <string name="cari_jalur">Cari Jalur</string>
    <string name="status_asal">Status Asal</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="about_me">Aplikasi ini adalah sebuah aplikasi untuk menentukan jalur terpendek antara lokasi Pengguna dengan toko spepatu Stars Internasional yang berada di area Jawa Timur.
    Aplikasi ini dibuat oleh Mahasiswa Teknik Informatika Universitas Bhayangkara Semester Akhir.</string>
    <string name="latitude_awal">Latitude Awal</string>
    <string name="longitude_awal">Longitude Awal</string>
    <string name="latitude_akhir">Latitude Akhir</string>
    <string name="longitude_akhir">Longitude Akhir</string>
    <string name="jarak_tempuh">Jarak Tempuh</string>
    <string name="_0_km">0 Km</string>
    <string name="title_activity_maps_toko">Map</string>
    <string name="cara_menggunakan_aplikasi">Cara menggunakan aplikasi:</string>
    <string name="_1_pilih_izinkan_pada_dialog_permintaan_izin">1. pilih izinkan pada dialog permintaan izin.</string>
    <string name="_2_tunggu_latitude_dan_longitude_sampai_keluar">2. Tunggu latitude dan longitude sampai keluar.</string>
    <string name="a_mencari_rute_terdekat">A. Mencari rute terdekat</string>
    <string name="_3_pilih_tujuan_yang_diinginkan">3. Pilih tujuan yang diinginkan.</string>
    <string name="_4_tekan_tombol_cari_jalur">4. Tekan tombol cari jalur sebanyak dua kali.</string>
    <string name="hidupkan_gps_perangkat_terlebih_dahulu">Hidupkan GPS perangkat terlebih dahulu/</string>
    <string name="_5_rute_akan_tampil_pada_peta">5. Rute akan tampil pada peta.</string>
    <string name="_4_pengguna_dapat_meliihat_posisi_toko_di_peta_dengan_mengklik_listview_toko_yang_dimaksud">4. Pengguna dapat meliihat posisi toko di peta dengan mengklik listview toko yang dimaksud.</string>
    <string name="_3_pengguna_bisa_mencari_data_toko_pada_kotak_pencarian">3. Pengguna bisa mencari data toko pada kotak pencarian.</string>
    <string name="_2_data_toko_akan_tampil_di_listview">2. Data toko akan tampil di listview.</string>
    <string name="_1_pilih_menu_lihat_data_toko">1. Pilih menu Lihat data toko.</string>
    <string name="b_melihat_data_toko">B. Melihat data toko.</string>
    <string name="bantuan">Bantuan</string>
    <string name="dibuat_oleh_farid">Dibuat oleh: Farid</string>
    <string name="avoid">Opsi Rute</string>
    <string name="mode">Mode Berkendara</string>
    <string name="tolls">tolls</string>
    <string name="highways">highways</string>
    <string name="ferries">ferries</string>
    <string name="driving">driving</string>
    <string name="bicycling">bicycling</string>
    <string name="walking">walking</string>
    <string name="tidak_ada">tidak ada</string>
    <string name="none">none</string>
    <string name="waktu_tempuh">Waktu Tempuh</string>
    <string name="_0_hours_0_minutes">0 Hours 0 Minutes</string>
</resources>
